src/styles/blocks/_table.scss
.table {
  width: 100%;
  margin: 0.5rem 0;

  @include media-breakpoint-up(lg) {
    max-height: calc(100vh - 1em);

    border: $border-width solid var(--border-color);
    overflow: auto;
  }
}

table {
  display: block;

  border-spacing: 0;

  @include media-breakpoint-up(lg) {
    display: table;
    width: 100%;
  }
}

thead {
  display: none;

  @include media-breakpoint-up(lg) {
    display: table-header-group;
  }
}

thead th {
  &[data-sort-column] {
    user-select: none;

    @include hover() {
      cursor: pointer;
    }
  }

  &[data-sort-direction]::after {
    padding-left: 3px;

    font-size: 0.7em;
    line-height: 0.7em;
  }

  &[data-sort-direction='asc']::after {
    content: '▲';
  }

  &[data-sort-direction='desc']::after {
    content: '▼';
  }

  @include media-breakpoint-up(lg) {
    position: sticky;
    top: 0;
    left: 0;
    z-index: 10;

    color: var(--btn-color);

    border-bottom: $border-width solid var(--border-color);
    background-color: var(--btn-bg);
  }
}

tbody {
  display: grid;
  gap: 0.5rem;

  @include media-breakpoint-up(md) {
    grid-template-columns: repeat(2, 1fr);
  }

  @include media-breakpoint-up(lg) {
    display: table-row-group;
  }
}

tbody th {
  font-weight: 400;

  @include media-breakpoint-up(lg) {
    position: sticky;
    left: -$border-width;
    z-index: 10;

    background-color: inherit;

    &::before,
    &::after {
      content: '';

      position: absolute;
      top: 0;
      bottom: 0;

      display: block;
      width: $border-width;

      background-color: var(--border-color);
    }

    &::before {
      left: 0;
    }

    &::after {
      right: -$border-width;
    }
  }
}

tr {
  display: block;

  border: $border-width solid var(--border-color);
  background-color: var(--table-striped-bg);
  transition: 0.3s;

  &:nth-child(even) {
    background-color: var(--body-bg);
  }

  @include media-breakpoint-up(lg) {
    display: table-row;

    border: none;
  }

  @include hover() {
    color: choose-contrast-color($row-bg--hover);

    background-color: $row-bg--hover;
  }
}

tr + tr {
  td,
  th {
    @include media-breakpoint-up(lg) {
      border-top: $border-width solid var(--border-color);
    }
  }
}

th,
td {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;

  text-align: left;
  word-break: break-word;

  &::before {
    content: attr(data-title);

    font-weight: 700;
  }

  @include media-breakpoint-up(lg) {
    display: table-cell;
    gap: 0;

    white-space: pre;
    border-bottom: none;

    &::before {
      display: none;
    }
  }
}

td + td,
th + th,
td + th,
th + td {
  border-top: $border-width solid var(--border-color);

  @include media-breakpoint-up(lg) {
    border-top: none;
  }
}

td + td,
th + th {
  @include media-breakpoint-up(lg) {
    border-left: $border-width solid var(--border-color);
  }
}

td[data-title='Tags'] {
  padding: px2rem(3);
}

